# ru_actix1

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  cert.pem  diesel.toml  g1.sh  key.pem  mydata.db  seto2.bat  te1.http
migrations/2024-12-02-131439_create_bonuses/: down.sql  up.sql
src/: jwt_mw.rs  main.old  main.rs  models.rs  schema.rs
static/: form1.html  upload.html
