[package]
name = "ru_actix1"
version = "0.1.1"
edition = "2021"

[dependencies]
actix-web = "4.9"
log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
futures = "0.3"
dotenv = "0.15"
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
rand = "0.8"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"






