[package]
name = "ru_actix1"
version = "0.1.2"
edition = "2021"

[dependencies]
#actix-web = "4.9"
actix-web = { version = "4.9", features = ["openssl"] }
actix-files = "0.6"
actix-multipart = "0.7"
sanitize-filename = "0.6"

log = "0.4"
env_logger = "0.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"
dotenv = "0.15"
diesel = { version = "2.2", features = ["sqlite", "r2d2", "chrono"] }
rand = "0.9"
chrono = { version = "0.4", features = ["serde"] }
jsonwebtoken = "9.3"
utoipa =  { version = "5" , features = [ "actix_extras", "chrono"] }
utoipa-swagger-ui = { version = "9", features = ["actix-web"] }

openssl = "0.10" # Add this line for SSL support







